[package]
name = "dilithium"
version = "0.1.0"
license = "Apache-2.0"
authors = ["0xGeN02"]
edition = "2024"
description = "ML-DSA (CRYSTALS-Dilithium) digital signature scheme — NIST FIPS 204"

[dependencies]
ml-dsa = { version = "0.1.0-rc.8" }
# getrandom 0.4 provides SysRng which works with rand_core 0.10
getrandom = { version = "0.4", features = ["sys_rng"] }
thiserror = "2"
hex = "0.4"
